--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@netlify/plugin-nextjs": "^4.41.3",
     "framer-motion": "^10.17.6",
     "heroicons": "^2.1.1",
     "next": "14.0.4",
