--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@netlify/plugin-nextjs": "^4.41.3",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^10.17.6",
     "heroicons": "^2.1.1",
     "next": "14.0.4",
